# rygel

./: .gitignore  Makefile.am  README  common.am  configure.ac  rygel-core-2.2.pc.in  rygel-renderer-2.2.pc.in  rygel-renderer-gst-2.2.pc.in  rygel-server-2.2.pc.in
data/xml/: Makefile.am
doc/: gi.txt
doc/man/: rygel.conf.xml
doc/reference/: doc-build.am
doc/reference/librygel-renderer/: Makefile.am
doc/reference/librygel-renderer-gst/: Makefile.am
doc/reference/librygel-server/: Makefile.am
examples/: example-renderer.py  sample-server.py
src/librygel-core/: Makefile.am  filelist.am  rygel-basic-management-test-nslookup.vala  rygel-basic-management-test-ping.vala  rygel-basic-management-test-traceroute.vala  rygel-basic-management-test.vala  rygel-basic-management.vala  rygel-plugin.vala  rygel-v1-hacks.vala
src/librygel-renderer/: Makefile.am  filelist.am  rygel-media-renderer-plugin.vala  rygel-renderer-v1-hacks.vala
src/librygel-server/: Makefile.am  filelist.am  rygel-http-server.vala  rygel-import-resource.vala  rygel-media-item.vala  rygel-media-object.vala  rygel-media-server-plugin.vala  rygel-server-v1-hacks.vala
src/plugins/media-export/: Makefile.am  rygel-media-export-dvd-parser.vala  rygel-media-export-harvester.vala  rygel-media-export-harvesting-task.vala  rygel-media-export-item-factory.vala  rygel-media-export-metadata-extractor.vala
src/rygel/: Makefile.am  rygel-acl.vala  rygel-main.vala  rygel-user-config.vala
src/ui/: Makefile.am  rygel-acl-provider.vala  rygel-preferences-dialog.vala
tests/: Makefile.am
